Set focus on the first widget in the dialog instead of the ok button

BUG:444806
BUG:445250
(cherry picked from commit 4588d993baad1c66af5e7b7c1c24f626ed9c70e4)